# Mask

./: .gitmodules  CMakeLists.txt  ForegroundBackgroundSegmentMask.cpp  ForegroundBackgroundSegmentMask.h  ForegroundBackgroundSegmentMask.hpp  Mask.cpp  Mask.h  Mask.hpp  Mask.hxx  MaskOperations.cpp  MaskOperations.h  MaskOperations.hpp  MaskOperations.hxx  MaskQt.cpp  MaskQt.h  MaskVTK.cpp  MaskVTK.h  MaskVTK.hpp  README  StrokeMask.cpp  StrokeMask.h  StrokeMask.hpp
Tests/: CMakeLists.txt  TestForegroundBackgroundSegmentMaskRead.cpp  TestMask.cpp  TestMaskOperations.cpp  TestMaskRead.cpp  Tests.cpp
Tests/data/: TestMask.fbmask  TestMask.mask
